@@ -25,6 +25,7 @@ Kiwix 0.9 beta5
 * Fixed buggy behaviour if you close the last tab (ID: 3459365)
 * Add Ctrl+ modifier to Home, Back and Forward buttons to branch to new tabs (ID: 3459481)
 * Improve the Windows installer to run it silently (with command line option /S)
+* Avoid double-checked menu item in language/skin menus in cas of abandoned restart process
 
 Kiwix 0.9 beta4
 * Fix regression, menu "last open" where not working anymore
